--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ index
 
 				<!-- Intro -->
 					<div id="intro">
-            <img src="./images/logo.png" width=65% height=65% style="position:relative; top:-270px; left:-20px;" oncontextmenu="return false;">
-						<p style="line-height: 55px;"> J'ai donc besoin de la lune, ou du bonheur, ou de l'immortalité,de quelque chose qui soit dément peut-être, <br/> mais qui ne soit pas de ce monde.</p>
+            <img src="./images/logo.png" width=65% height=65% style="position:relative; top:-125px; left:-20px;" oncontextmenu="return false;">
+						<p style="line-height: 55px; top:-70px;"> J'ai donc besoin de la lune, ou du bonheur, ou de l'immortalité,de quelque chose qui soit dément peut-être, <br/> mais qui ne soit pas de ce monde.</p>
             
             <!-- FORM ALBERT CAMUS CALIGULA -->
 						<ul class="actions">
