--- a/index2.html
+++ b/index2.html
@@ -108,10 +108,10 @@
 									</div>
 								</header>
 								<a class="image featured"><img src="./html/rambling/1/image008.jpg" alt="" /></a>
-								<p> 感觉随年龄增长，兴趣爱好随之改变，是时候总结了下自己亲身经历的这10年的ACGN发展和个人理解。恐怕以后连整理的兴趣都没了.</p>
+								<p> 感觉随年龄增长，兴趣爱好随之改变，是时候总结了下自己亲身经历的这10年的ACGN发展和个人理解。否则怕是以后连整理的兴趣都没了.</p>
 								<footer>
 									<ul class="actions">
-										<li><a href="./html/rambling/single.html" class="button large">Continue Reading</a></li>
+										<li><a href="./html/rambling/single1.html" class="button large">Continue Reading</a></li>
 									</ul>
 									<ul class="stats">
 										<li><a href="#">General</a></li>
