--- a/index2.html
+++ b/index2.html
@@ -30,12 +30,12 @@
 						</nav>
 						<nav class="main">
 							<ul>
-								<li class="search">
+								<!-- <li class="search">
 									<a class="fa-search" href="#search">Search</a>
 									<form id="search" method="get" action="#">
 										<input type="text" name="query" placeholder="Search" />
 									</form>
-								</li>
+								</li> -->
 								<li class="menu">
 									<a class="fa-bars" href="#menu">Menu</a>
 								</li>
@@ -47,11 +47,11 @@
 					<section id="menu">
 
 						<!-- Search -->
-							<section>
+							<!-- <section>
 								<form class="search" method="get" action="#">
 									<input type="text" name="query" placeholder="Search" />
 								</form>
-							</section>
+							</section> -->
 
 						<!-- Links -->
 							<section>
@@ -84,11 +84,11 @@
 							</section>
 
 						<!-- Actions -->
-							<section>
+							<!-- <section>
 								<ul class="actions stacked">
 									<li><a href="#" class="button large fit">Log In</a></li>
 								</ul>
-							</section>
+							</section> -->
 
 					</section>
 
