--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 						<h1><a href="./index.html">Future Imperfect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
+								<li><a href="#">Home</a></li>
 								<li><a href="#">Ipsum</a></li>
 								<li><a href="#">Feugiat</a></li>
 								<li><a href="#">Tempus</a></li>
@@ -81,7 +81,7 @@
 										<a class="author"><span class="name">CURSTAR</span><img src="./images/index1/logo_small.png" alt="" /></a>
 									</div>
 								</header>
-								<a href="./html/rambling/single_12.html" class="image featured"><img src="./html/rambling/1_2/イベントブック：転生紀元 序章Ⅲ 最後の絵99030258_p0.jpg" alt="" /></a>
+								<a href="./html/rambling/single_12.html" class="image featured"><img class="image featured" src="./html/rambling/1_2/イベントブック：転生紀元 序章Ⅲ 最後の絵99030258_p0.jpg" alt="" /></a>
 								<p>我认为那是不仅是科技的可能性，也是社会层面改变的可能性。虽然困苦于身体，受制于时代和出生，但是人那奇妙的脑袋，能带来幻想、慰藉乃至奇迹。</p>
 								<footer>
 									<ul class="actions">
@@ -107,7 +107,7 @@
 										<a class="author"><span class="name">CURSTAR</span><img src="./images/index1/logo_small.png" alt="" /></a>
 									</div>
 								</header>
-								<a class="image featured"><img src="./html/rambling/1_1/image008.jpg" alt="" /></a>
+								<a href="./html/rambling/single_11.html" class="image featured"><img src="./html/rambling/1_1/image008.jpg" alt="" /></a>
 								<p> 感觉随年龄增长，兴趣爱好随之改变，是时候总结了下自己亲身经历的这10年的ACGN发展和个人理解。否则怕是以后连整理的兴趣都没了.</p>
 								<footer>
 									<ul class="actions">
