--- a/html/rambling/single_12.html
+++ b/html/rambling/single_12.html
@@ -112,8 +112,12 @@
                   <p>科技发展的终点/未来是什么情况，人们幻想是废土、赛博朋克、终产者，当然也可以是社会主义。而本人在21世纪持悲观态度，因为这损害了既得利益者，若是废土之下保留了科技，暂时除去了政治的裙带回到一张白纸，或是赛博朋克下垄断的企业家的内心是一个共产主义者，在这荒谬的假设下才有可能。当然这只能在局部地区实现，整个地球全体的实现我是持更加悲观的态度。统治者的极端和巅峰，在加缪《卡利古拉》由小军靴之称卡利古拉，他说，统治的实质是蔑视。我那时想这是怜悯。但这两者都太极端了，应该是没有“统治”这一本身，卡利古拉因为面对死亡的爱人而”疯“：他发现了死亡是那么纯粹，你在世间拥有的一切面对它都是虚无。加缪认为，自杀是唯一严肃的哲学问题，我深以为然。他知道了世界的真面目，试图凭自身来迫使人民意识到一切，以自身的死来”证道“了。世界的所有”常识”，面对质疑后并不是牢不可破的（反而言之，因为愉悦是短暂的，在生活中享受痛苦的回味也是一种自欺欺人）。意义这个词的本身并无含义，在质疑和自省中也是没有含义的。面对这些之后也会提及，简单来说就是，无限延长“生”的本身，或是死亡。自称是社会主义国家大多有集体意义上的屠杀？这倒是无关。所以，如果统治能让人永生到产生自杀的倾向，那或许比卡利古拉更加高明，但是他不是真正的神，他只能作为死神。所以，若是集权甚至独裁，能做到合理性的公平并不断富足的生活，那体制和社会制度便对于民众不重要了，那他也便成了神。</p>
                   <p>网上没法找到相同的概念，类似的OGAS和digital socialism，当然这也是一种新控制论。先简单的概括下理念，由人工智能管理的城市，机器人代替了绝大部分的劳动，生产资料的公有，目的是所有人类拥有生活的选择权。注意的是，除了智能方面其他学科也应该得到了必要的发展，以下将从不同方面介绍其内容（之后用百解模式称呼，一朝问道，则百难自解）。但是对于人性的预期有不确定性，这也可以算是一个社会性的实验。但是道可道，非常道，只有变化才是不变的真理，历史不会随福山终结于资本主义，或许也不会终结于共产主义。</p>
                   <p>以下通过几个方面描述一下。</p>
-                  <p>经济，任何活少钱多的工作都是对于其他人的剥削，而全球化也让这种剥削异化。这种剥削的必然存在和人类对公平、富裕社会的期望想矛盾，这就引出了百解模式下的“剥削机器“，当然未来称呼为机器人可能更加合适。作为生产资料，机器获得的收益由国家统一控制，在按照固定的货币形式发放。一切金钱的交易都是电子的，而且每个人只有一个账号。当月未用完的钱会少部分的留存到下一个月（或没有）。而富裕生活下需求的多样性也造成了对外出口的事实，因为特殊需求的众多导致了物质上单一的需求变得难以满足，这在一个小国可能可以实现，利用专门的特长赚取外汇而换取资源，而更大的超级大国因为资源的富足也有尝试的价值，这里的国家概念是在外部情况不安定下实现的，若是没有境外的干扰应该考虑无政府的可能性。而人们因为个人的工作创造的财富将会被计入到一个算法，这个算法的目的是鼓励人们进行任何有价值的工作，当然也应该保持最高收入是最低收入（不包括罚款）的1.99-10倍之间（稀释过高的财富获取），1.99是理论上一个人的财富无法买下另一个人。</p>
-
+                  <p>经济，任何活少钱多的工作都是对于其他人的剥削，财富只有两种获得的形式：生产和转移，而全球化也让这种剥削异化。这种剥削的必然存在和人类对公平、富裕社会的期望想矛盾，这就引出了百解模式下的“剥削机器“，当然未来称呼为机器人可能更加合适。作为生产资料，机器获得的收益由国家统一控制，在按照固定的货币形式发放。一切金钱的交易都是电子的，而且每个人只有一个账号。当月未用完的钱会少部分的留存到下一个月（或没有）。而富裕生活下需求的多样性也造成了对外出口的事实，因为特殊需求的众多导致了物质上单一的需求变得难以满足，这在一个小国可能可以实现，利用专门的特长赚取外汇而换取资源，而更大的超级大国因为资源的富足也有尝试的价值，这里的国家概念是在外部情况不安定下实现的，若是没有境外的干扰应该考虑无政府的可能性。而人们因为个人的工作创造的财富将会被计入到一个算法，这个算法的目的是鼓励人们进行任何有价值的工作，当然也应该保持最高收入是最低收入（不包括罚款）的1.99-10倍之间（稀释过高的财富获取），1.99是理论上一个人的财富无法买下另一个人。</p>
+                  <p>政治，采用AI、知识性人才和民众的制衡，不同类型的提案由不同的投票和决定规则，但一般每个方面的方向应该保持长期性。当然对于反对思想的人民，也不应该否定他们的公民权，把不同理念的人类分开在不同区域，在和平时期分成“城内”“城外”是一种想法，其中对于“城外”生育等可以允许，但是要对其自身的福利做出限制，作出不提倡的表现，这是一个过渡模式，能给人类思想转变的时间，也会利于这个“国家”的稳定。</p>
+                  <p>科技，强人工智能的发展是一切的前提。最优先鼓励的应该是科技的创新。科技的创新需要源源不断的人才的活血，例如18岁前的大众式免费教育和之后的选择性窄方向学习。而信息数据是最为重要的，所有的数据都应该收集，公共的数据公开，私人的数据需要保存以备不时之需和人工智能的处理。</p>
+                  <p>交通，在道路上实行人车的分离，车子在市区只保留作为运输工具的本质，地面只能走路和慢速交通工具（飞行板），汽车/地铁等工具将在地下，或空中，于人类除了乘车点不应有任何的交集，交通工具的使用同一交由AI调度，私人车辆不被鼓励，而是每次有使用需求时，呼唤附近的汽车，或走入地铁。</p>
+                  <p>文化生活，家庭甚至夫妻的关系将会终结，人与人之间任何交往形式都应该被接受，因为这时人们已经不必为金钱而出卖自己，而人们之间的繁衍后代（包括养子）都是禁止的，否则将会取消其“内城”居民的资格。因为家庭的关系是导致财富、关系积累的纽带，单代的财富积累并不会有严重的影响。由此，会产生新的亲密关系，双方赠与礼物这一点应纳入收入考虑，由此管控价格昂贵的类遗产性质的赠予，之后的学阀等组织架构也需要有新的结构性设计。某种程度上，这也消减了人们性别之间的差距，性别上承认男女个体生理上的差异，而禁止其他任何方面因此而造成的不相同的待遇（合理性的差异考虑）。</p>
+                  <p>住房，其实是向国家租房，因为不同地理位置的房子的价格会不同，这会每个月/日扣费，考虑降低房屋建造方人员选房优先性。低房，甚至单人/多人申请使用独门别墅。应该按照工作就近安排。</p>
 								<footer>
 									<ul class="stats">
 										<li><a href="#">General</a></li>
