--- a/index.html
+++ b/index.html
@@ -451,11 +451,119 @@
                         LUCK</div>
                 </a>
             </div>
-            <div class="card" id="card-2">
-                <a href="#" class="card-link">
-                    <img class="card-image" src="" alt="">
-                    <span class="card-placeholder">Card 2</span>
+            <div class="card relative overflow-hidden group" id="card-2"
+                style="background: linear-gradient(135deg, #1e3a8a 0%, #0f172a 100%);">
+                <a href="http://1.15.89.88/quiz_app/" class="card-link block w-full h-full relative">
+                    <!-- 装饰背景 -->
+                    <div class="absolute inset-0 opacity-10 pointer-events-none">
+                        <div class="absolute top-10 left-10 w-2 h-2 bg-white rounded-full sparkle"
+                            style="animation-delay: 0.4s"></div>
+                        <div class="absolute bottom-20 right-10 w-1 h-1 bg-white rounded-full sparkle"
+                            style="animation-delay: 1.2s"></div>
+                    </div>
+
+                    <div class="flex w-full h-full">
+                        <!-- 左侧：插画区 -->
+                        <div class="w-1/2 relative h-full flex items-center justify-center">
+                            <!-- Scaled SVG Container -->
+                            <div class="absolute scale-[0.6] origin-center transform -translate-x-2">
+                                <svg width="300" height="300" viewBox="0 0 500 500"
+                                    class="drop-shadow-xl overflow-visible">
+                                    <defs>
+                                        <filter id="glow-blue" x="-20%" y="-20%" width="140%" height="140%">
+                                            <feGaussianBlur stdDeviation="15" result="blur" />
+                                            <feComposite in="SourceGraphic" in2="blur" operator="over" />
+                                        </filter>
+                                    </defs>
+
+                                    <!-- Main Puzzle Group -->
+                                    <g transform="translate(0, 50)">
+                                        <!-- 左侧拼图块 -->
+                                        <g transform="translate(45, 140)" class="puzzle-float-1">
+                                            <path d="M0 0 L150 0 L150 60 L185 60 L185 110 L150 110 L150 170 L0 170 Z"
+                                                fill="#2563EB"
+                                                class="transition-transform duration-500 group-hover:translate-x-2" />
+                                            <polygon points="0,0 150,0 130,20 20,20" fill="white" fill-opacity="0.15" />
+                                            <polygon points="150,60 185,60 175,70 150,70" fill="white"
+                                                fill-opacity="0.2" />
+                                            <polygon points="0,170 150,170 135,155 15,155" fill="black"
+                                                fill-opacity="0.1" />
+                                        </g>
+
+                                        <!-- 右侧拼图块 -->
+                                        <g transform="translate(240, 140)" class="puzzle-float-2">
+                                            <path d="M0 0 L180 0 L180 170 L0 170 L0 110 L35 110 L35 60 L0 60 Z"
+                                                fill="#3B82F6"
+                                                class="transition-transform duration-500 group-hover:-translate-x-2" />
+                                            <polygon points="0,0 180,0 160,20 40,20" fill="white" fill-opacity="0.15" />
+                                            <polygon points="0,170 180,170 165,155 15,155" fill="black"
+                                                fill-opacity="0.1" />
+                                        </g>
+
+                                        <!-- 左侧手部 (抽象 Low Poly) -->
+                                        <g transform="translate(0, 200) rotate(-10)">
+                                            <polygon points="0,50 80,40 100,100 20,110" fill="#FDBA74" />
+                                            <polygon points="80,40 130,50 135,80 100,100" fill="#FB923C" />
+                                        </g>
+
+                                        <!-- 右侧手部 (抽象 Low Poly) -->
+                                        <g transform="translate(380, 190) rotate(10)">
+                                            <polygon points="120,50 40,40 20,100 100,110" fill="#FDBA74" />
+                                            <polygon points="40,40 -10,50 -15,80 20,100" fill="#FB923C" />
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
+                        </div>
+
+                        <!-- 右侧：标题 -->
+                        <div class="w-1/2 flex flex-col justify-center pr-4 z-10">
+                            <div class="space-y-1 text-center scale-90">
+                                <h2 class="text-blue-400 text-xs tracking-[0.4em] uppercase font-bold opacity-80">
+                                    CHALLENGE</h2>
+                                <h1 class="text-3xl md:text-5xl text-white title-font drop-shadow-[0_4px_0_#1d4ed8]">
+                                    FIT<br>QUIZ</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 装饰背景大字 -->
+                    <div
+                        class="absolute -right-4 -top-8 text-[6rem] font-black text-white/[0.03] select-none pointer-events-none italic overflow-hidden">
+                        FIT</div>
                 </a>
+                <style>
+                    @keyframes float-p1 {
+
+                        0%,
+                        100% {
+                            transform: translate(45px, 140px);
+                        }
+
+                        50% {
+                            transform: translate(45px, 130px);
+                        }
+                    }
+
+                    @keyframes float-p2 {
+
+                        0%,
+                        100% {
+                            transform: translate(240px, 140px);
+                        }
+
+                        50% {
+                            transform: translate(240px, 150px);
+                        }
+                    }
+
+                    .puzzle-float-1 {
+                        animation: float-p1 4s ease-in-out infinite;
+                    }
+
+                    .puzzle-float-2 {
+                        animation: float-p2 5s ease-in-out infinite;
+                    }
+                </style>
             </div>
             <div class="card" id="card-3">
                 <a href="#" class="card-link">
