--- a/index.html
+++ b/index.html
@@ -817,10 +817,157 @@
             </div>
 
             <!-- Row 2 -->
-            <div class="card" id="card-4">
-                <a href="#" class="card-link">
-                    <img class="card-image" src="" alt="">
-                    <span class="card-placeholder">Card 4</span>
+            <div class="card relative overflow-hidden group" id="card-4">
+                <a href="http://1.15.89.88/vue_project/" class="card-link block w-full h-full relative">
+                    <!-- 场景容器 -->
+                    <div class="relative w-full h-full overflow-hidden">
+                        <!-- 1. 背景天空 (径向渐变) -->
+                        <div
+                            class="absolute inset-0 bg-[radial-gradient(ellipse_at_bottom,_var(--tw-gradient-stops))] from-indigo-900 via-slate-900 to-black">
+                        </div>
+
+                        <!-- 2. 星星 (随机分布) -->
+                        <svg class="absolute inset-0 w-full h-full opacity-80" xmlns="http://www.w3.org/2000/svg">
+                            <!-- 随机生成的星星 -->
+                            <circle cx="10%" cy="20%" r="1" fill="white" class="animate-pulse"
+                                style="animation-duration: 3s" />
+                            <circle cx="25%" cy="15%" r="1.5" fill="white" class="animate-pulse"
+                                style="animation-duration: 4s" />
+                            <circle cx="40%" cy="30%" r="1" fill="white" class="animate-pulse"
+                                style="animation-duration: 2s" />
+                            <circle cx="60%" cy="10%" r="2" fill="#FEF3C7" class="animate-pulse"
+                                style="animation-duration: 5s" />
+                            <circle cx="80%" cy="25%" r="1" fill="white" class="animate-pulse"
+                                style="animation-duration: 3s" />
+                            <circle cx="90%" cy="40%" r="1.5" fill="white" class="animate-pulse"
+                                style="animation-duration: 4s" />
+                            <circle cx="15%" cy="60%" r="1" fill="white" opacity="0.5" />
+                            <circle cx="35%" cy="50%" r="1" fill="white" opacity="0.5" />
+                            <circle cx="75%" cy="65%" r="1" fill="white" opacity="0.5" />
+                            <circle cx="5%" cy="10%" r="2" fill="white" opacity="0.8" />
+                            <!-- 流星 -->
+                            <line x1="70%" y1="0%" x2="60%" y2="15%" stroke="url(#meteor-gradient-card4)"
+                                stroke-width="1" stroke-linecap="round"
+                                class="opacity-0 animate-[meteor_7s_linear_infinite]" />
+                            <defs>
+                                <linearGradient id="meteor-gradient-card4" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" stop-color="white" stop-opacity="0" />
+                                    <stop offset="50%" stop-color="white" stop-opacity="1" />
+                                    <stop offset="100%" stop-color="white" stop-opacity="0" />
+                                </linearGradient>
+                            </defs>
+                        </svg>
+
+                        <!-- 3. 月亮 (Low Poly 几何感) -->
+                        <div class="absolute top-4 right-6 w-[15%] aspect-square">
+                            <svg viewBox="0 0 100 100"
+                                class="w-full h-full drop-shadow-[0_0_15px_rgba(253,224,71,0.5)]">
+                                <path d="M70,10 Q90,50 70,90 Q50,60 70,10 Z" fill="#FDE047" opacity="0.9" />
+                                <polygon points="70,10 60,30 80,40" fill="#FEF9C3" opacity="0.4" />
+                                <polygon points="70,90 60,70 80,60" fill="#FEF9C3" opacity="0.4" />
+                                <polygon points="60,30 60,70 45,50" fill="#EAB308" opacity="0.2" />
+                            </svg>
+                        </div>
+
+                        <!-- 4. 远景山脉 (Low Poly) -->
+                        <div class="absolute bottom-0 w-full h-[40%]">
+                            <svg viewBox="0 0 1200 400" preserveAspectRatio="none" class="w-full h-full">
+                                <!-- 最远的山 (深紫色) -->
+                                <polygon points="0,400 0,200 150,100 300,250 500,150 700,300 900,180 1200,300 1200,400"
+                                    fill="#312E81" opacity="0.6" />
+                                <!-- 中景山 (靛蓝色) -->
+                                <polygon points="0,400 100,250 250,350 400,200 600,320 800,280 1200,400" fill="#1E1B4B"
+                                    opacity="0.8" />
+                            </svg>
+                        </div>
+
+                        <!-- 5. 地面与前景岩石 -->
+                        <div class="absolute bottom-0 w-full h-[25%] bg-gradient-to-t from-black to-transparent">
+                            <svg viewBox="0 0 1200 300" preserveAspectRatio="none" class="w-full h-full">
+                                <!-- 地面轮廓 -->
+                                <path d="M0,300 L0,100 L200,120 L400,80 L600,110 L900,90 L1200,120 L1200,300 Z"
+                                    fill="#0F172A" />
+                                <!-- 前景大岩石 (猴子坐的地方) -->
+                                <g transform="translate(200, 50)">
+                                    <polygon points="0,250 50,150 150,140 220,180 250,250" fill="#1E293B" />
+                                    <!-- 岩石受光面 -->
+                                    <polygon points="50,150 100,160 150,140 120,130" fill="#334155" />
+                                    <polygon points="0,250 50,150 20,200" fill="#0F172A" opacity="0.5" />
+                                </g>
+                            </svg>
+                        </div>
+
+                        <!-- 6. 金合欢树 (Acacia Trees - Low Poly 剪影) -->
+                        <!-- 树 1 (右侧) -->
+                        <div class="absolute bottom-[10%] right-[10%] w-[30%] aspect-square">
+                            <svg viewBox="0 0 200 200" class="w-full h-full drop-shadow-lg">
+                                <!-- 树干 -->
+                                <polygon points="95,200 105,200 100,120" fill="#000000" />
+                                <polygon points="100,130 80,100 98,125" fill="#000000" /> <!-- 左枝 -->
+                                <polygon points="100,130 120,100 102,125" fill="#000000" /> <!-- 右枝 -->
+                                <!-- 树冠 (扁平三角形组合) -->
+                                <polygon points="40,100 160,100 100,70" fill="#000000" opacity="0.9" />
+                                <polygon points="20,110 110,110 65,85" fill="#000000" opacity="0.8" />
+                                <polygon points="90,110 180,110 135,85" fill="#000000" opacity="0.8" />
+                            </svg>
+                        </div>
+                        <!-- 树 2 (远景左侧) -->
+                        <div class="absolute bottom-[15%] left-[5%] w-[15%] aspect-square opacity-70">
+                            <svg viewBox="0 0 200 200" class="w-full h-full">
+                                <polygon points="98,200 102,200 100,140" fill="#111" />
+                                <polygon points="50,120 150,120 100,100" fill="#111" />
+                            </svg>
+                        </div>
+
+                        <!-- 7. 猴子 (Low Poly - 几何拼接) -->
+                        <!-- 位于前景岩石上 (left: ~25%, bottom: ~20%) -->
+                        <div class="absolute bottom-[12%] left-[22%] w-[20%] aspect-[4/5] z-10">
+                            <svg viewBox="0 0 200 250" class="w-full h-full drop-shadow-2xl">
+                                <g transform="translate(50, 50)">
+                                    <!-- 身体主体 -->
+                                    <polygon points="40,150 80,140 90,100 50,90 20,120" fill="#78350F" /> <!-- 背部/身体 -->
+                                    <polygon points="40,150 80,140 70,170 30,160" fill="#431407" /> <!-- 下腹阴影 -->
+
+                                    <!-- 腿部 (坐姿) -->
+                                    <polygon points="70,170 90,160 100,180 60,180" fill="#92400E" /> <!-- 后腿 -->
+                                    <polygon points="20,120 10,150 40,150" fill="#92400E" /> <!-- 前腿/手臂支撑 -->
+
+                                    <!-- 尾巴 (多段式) -->
+                                    <path d="M60,180 Q40,200 20,180 Q10,170 15,190" fill="none" stroke="#78350F"
+                                        stroke-width="8" stroke-linecap="round" stroke-linejoin="round" />
+
+                                    <!-- 头部 (仰望) -->
+                                    <g transform="rotate(-30, 70, 80)">
+                                        <polygon points="60,90 80,90 85,70 65,60 55,75" fill="#B45309" /> <!-- 头颅 -->
+                                        <polygon points="80,90 90,85 85,70" fill="#D97706" /> <!-- 脸部亮面 -->
+                                        <circle cx="75" cy="75" r="2" fill="black" opacity="0.6" />
+                                        <!-- 眼睛 (闭眼享受或仰望) -->
+                                        <circle cx="75" cy="75" r="0.5" fill="white" />
+                                    </g>
+
+                                    <!-- Low Poly 高光面/切面细节 -->
+                                    <polygon points="50,90 60,100 80,100" fill="#D97706" opacity="0.3" />
+                                </g>
+                            </svg>
+                        </div>
+
+                        <!-- 标题文字 (右上或左上) -->
+                        <div class="absolute top-6 left-6 transition-transform duration-300 group-hover:scale-105">
+                            <h1
+                                class="text-3xl font-black tracking-tighter text-white opacity-90 drop-shadow-lg leading-none">
+                                <span
+                                    class="block text-transparent bg-clip-text bg-gradient-to-r from-amber-200 to-yellow-500">Monkey</span>
+                                <span class="text-lg font-light tracking-widest uppercase">Astrology</span>
+                            </h1>
+                            <div class="mt-1 h-0.5 w-12 bg-gradient-to-r from-yellow-500 to-transparent rounded-full">
+                            </div>
+                        </div>
+
+                        <!-- 装饰纹理层 (Noise) -->
+                        <div class="absolute inset-0 opacity-[0.05] pointer-events-none mix-blend-overlay"
+                            style="background-image: url('https://www.transparenttextures.com/patterns/stardust.png');">
+                        </div>
+                    </div>
                 </a>
             </div>
             <div class="card" id="card-5">
